infra/store-resume-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mefit-production-store-resume-worker
  namespace: mefit-backend-production
  labels:
    app: mefit-production-store-resume-worker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: mefit-production-store-resume-worker
  template:
    metadata:
      labels:
        app: mefit-production-store-resume-worker
    spec:
      imagePullSecrets:
        - name: mefit-production-dockerhub
      containers:
        - name: store-resume-worker
          image: teammefit/mefit-store-resume:production
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
