infra/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mefit-production-redis
  namespace: mefit-backend-production
spec:
  selector:
    app: mefit-production-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
