infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mefit-production-api-ingress
  namespace: mefit-backend-production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - mefit.xn--hy1by51c.kr
    secretName: mefit-tls-cert
  rules:
  - host: mefit.xn--hy1by51c.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mefit-production-api
            port:
              number: 8000
